SEBSP-220 added only one PENDING ScheduledDeletion allowed at a time. And tests